--- a/05.html
+++ b/05.html
@@ -66,23 +66,26 @@
 
 
              <span class="detailcategory">
-            branding / app <br> 2013.03-2013.10
+            mobile app <br> 2014.09-2015.01
         </span>
 
 
 
-            <div class="people2">  </div>
+            <div class="people">  </div>
 
         </div>
     </div>
 
 
     <div class="detail2_m">
-        <span class="detailtext">포트폴리오 작품설명</span>
+        <span class="detailtext"><p>포트폴리오 작품설명</span>
     </div>
 
 
-    <div class="works2"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
+    <div class="works2">
+
+        <div id="img-resize"><img src="images/이미지.jpg"></div>
+    </div>
 
 </div>
 
