--- a/01.html
+++ b/01.html
@@ -31,9 +31,9 @@
     <div class="left"><a href="07.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">branding</span><p>
+            <span class="detailtitle">title</span><p>
         <span class="detailcategory">
-            mobile app <br> 2014.09-2015.01
+            branding <br> 2014.09-2015.01
         </span>
             <div class="people">  </div>
 
@@ -62,11 +62,11 @@
 
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">branding</span><p>
+            <span class="detailtitle">title</span><p>
 
 
              <span class="detailcategory">
-            mobile app <br> 2014.09-2015.01
+            branding <br> 2014.09-2015.01
         </span>
 
 
