--- a/04.html
+++ b/04.html
@@ -30,9 +30,9 @@
     <div class="left"><a href="03.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">dasom</span><p>
+            <span class="detailtitle">title</span><p>
         <span class="detailcategory">
-            mobile app <br> 2014.07-2014.08
+            branding <br> 2014.07-2014.08
         </span>
             <div class="people">  </div>
 
@@ -61,11 +61,11 @@
 
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">dasom</span><p>
+            <span class="detailtitle">title</span><p>
 
 
              <span class="detailcategory">
-            mobile app <br> 2014.07-2014.08
+            branding <br> 2014.07-2014.08
         </span>
 
 
