--- a/05.html
+++ b/05.html
@@ -31,9 +31,9 @@
     <div class="left"><a href="04.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">sopoong in seoul</span><p>
+            <span class="detailtitle">title</span><p>
         <span class="detailcategory">
-            branding / app <br> 2013.03-2013.10
+            branding <br> 2013.03-2013.10
         </span>
             <div class="people2">  </div>
 
@@ -62,11 +62,11 @@
 
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">sopoong in seoul</span><p>
+            <span class="detailtitle">title</span><p>
 
 
              <span class="detailcategory">
-            mobile app <br> 2014.09-2015.01
+            branding <br> 2014.09-2015.01
         </span>
 
 
@@ -78,7 +78,7 @@
 
 
     <div class="detail2_m">
-        <span class="detailtext"><p>포트폴리오 작품설명</span>
+        <span class="detailtext">포트폴리오 작품설명</span>
     </div>
 
 
