--- a/06.html
+++ b/06.html
@@ -30,7 +30,7 @@
     <div class="left"><a href="02.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">works</span><p>
+            <span class="detailtitle">title</span><p>
         <span class="detailcategory">
                motion graphic <br> 2013.01-2013.03
         </span>
@@ -61,7 +61,7 @@
 
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">works</span><p>
+            <span class="detailtitle">title</span><p>
 
 
              <span class="detailcategory">
