--- a/07.html
+++ b/07.html
@@ -30,7 +30,7 @@
     <div class="left"><a href="06.html"><img src="images/left.svg"></a></div>
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">dasom is</span><p>
+            <span class="detailtitle">title</span><p>
         <span class="detailcategory">
                motion graphic <br> 2014.03-2014.11
         </span>
@@ -61,7 +61,7 @@
 
     <div class="details">
         <div class="detail1">
-            <span class="detailtitle">dasom is</span><p>
+            <span class="detailtitle">title</span><p>
 
 
              <span class="detailcategory">
