--- a/07.html
+++ b/07.html
@@ -21,7 +21,7 @@
 <div class="x-com">
     <header class="major">
         <div class="major2 clearfix">
-            <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
+            <!--<div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>-->
             <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
             <div class="profile"><a href="profile.html"><img src="images/profile.svg"></a></div>
         </div>
@@ -43,7 +43,13 @@
 
     </div>
 
-    <div class="works"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
+    <div class="works"> <div id="img-resize">
+        <iframe src="//player.vimeo.com/video/79606523" width="100%" height="320px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div></div>
+    <img src="images/이미지.jpg">
+
+
+
+    </div></div>
     <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
     <div class="right"><a href="01.html"><img src="images/right.svg"></a></div>
 </div>
@@ -81,10 +87,12 @@
     </div>
 
 
-    <div class="works2"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
+    <div class="works2"> <div id="img-resize">
+        <iframe src="//player.vimeo.com/video/79606523" width="100%" height="240px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div></div>
 
 </div>
 
 
 </body>
+
 </html>
