--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
 <div class="x-com">
     <header class="major">
         <div class="major2 clearfix">
-            <div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>
+            <!--<div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>-->
             <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
             <div class="profile"><a href="index.html"><img src="images/profile-close.svg"></a></div>
         </div>
