--- a/07.html
+++ b/07.html
@@ -50,7 +50,7 @@
 
 
     </div></div>
-    <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
+    <!--<div class="end"><i class="fa fa-chevron-circle-up"></i></div>-->
     <div class="right"><a href="01.html"><img src="images/right.svg"></a></div>
 </div>
 
