--- a/01.html
+++ b/01.html
@@ -30,17 +30,21 @@
 
     <div class="left"><a href="07.html"><img src="images/left.svg"></a></div>
     <div class="details">
-        <div class="detail1">
-            <span class="detailtitle">title</span><p>
+        <div class="detailline">
+            <div class="detail1">
+                <span class="detailtitle">title</span><br>
         <span class="detailcategory">
-            branding <br> 2014.09-2015.01
+            branding <br>
         </span>
-            <div class="people">  </div>
+                <!--<div class="people">  </div>-->
+
+            </div>
+            <div class="detail2">
+                <span class="detailtext">포트폴리오 작품설명 </span>
+            </div>
 
         </div>
-        <div class="detail2">
-            <span class="detailtext">포트폴리오 작품설명 </span>
-        </div>
+
 
     </div>
 
@@ -61,25 +65,31 @@
         </div></header>
 
     <div class="details">
-        <div class="detail1">
-            <span class="detailtitle">title</span><p>
+        <div class="detailline">
+            <div class="detail1">
+                <span class="detailtitle">title</span><br>
 
 
              <span class="detailcategory">
-            branding <br> 2014.09-2015.01
+            branding <br>
+                  <p></p> <span class="detailtext">포트폴리오 작품설명</span>
         </span>
 
 
 
-            <div class="people">  </div>
+                <!--<div class="people">  </div>-->
 
+
+            </div>
         </div>
+
+
     </div>
 
 
-    <div class="detail2_m">
-        <span class="detailtext">포트폴리오 작품설명</span>
-    </div>
+    <!--<div class="detail2_m">-->
+        <!--<span class="detailtext">포트폴리오 작품설명</span>-->
+    <!--</div>-->
 
 
     <div class="works2">
