--- a/04.html
+++ b/04.html
@@ -1,4 +1,5 @@
-<html><link rel="shortcut icon" href="images/symbol-01.png">
+<html>
+<link rel="shortcut icon" href="images/symbol-01.png">
 <body bgcolor="white">
 
 <title>Hello! Dasom</title>
@@ -29,17 +30,21 @@
 
     <div class="left"><a href="03.html"><img src="images/left.svg"></a></div>
     <div class="details">
-        <div class="detail1">
-            <span class="detailtitle">title</span><p>
+        <div class="detailline">
+            <div class="detail1">
+                <span class="detailtitle">title</span><br>
         <span class="detailcategory">
-            branding <br> 2014.07-2014.08
+            branding <br>
         </span>
-            <div class="people">  </div>
+                <!--<div class="people">  </div>-->
+
+            </div>
+            <div class="detail2">
+                <span class="detailtext">포트폴리오 작품설명 </span>
+            </div>
 
         </div>
-        <div class="detail2">
-            <span class="detailtext">포트폴리오 작품설명 </span>
-        </div>
+
 
     </div>
 
@@ -60,28 +65,37 @@
         </div></header>
 
     <div class="details">
-        <div class="detail1">
-            <span class="detailtitle">title</span><p>
+        <div class="detailline">
+            <div class="detail1">
+                <span class="detailtitle">title</span><br>
 
 
              <span class="detailcategory">
-            branding <br> 2014.07-2014.08
+            branding <br>
+                  <p></p> <span class="detailtext">포트폴리오 작품설명</span>
         </span>
 
 
 
-            <div class="people">  </div>
+                <!--<div class="people">  </div>-->
 
+
+            </div>
         </div>
+
+
     </div>
 
 
-    <div class="detail2_m">
-        <span class="detailtext">포트폴리오 작품설명</span>
+    <!--<div class="detail2_m">-->
+    <!--<span class="detailtext">포트폴리오 작품설명</span>-->
+    <!--</div>-->
+
+
+    <div class="works2">
+
+        <div id="img-resize"><img src="images/이미지.jpg"></div>
     </div>
-
-
-    <div class="works2"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
 
 </div>
 
