--- a/07.html
+++ b/07.html
@@ -1,4 +1,5 @@
-<html><link rel="shortcut icon" href="images/symbol-01.png">
+<html>
+<link rel="shortcut icon" href="images/symbol-01.png">
 <body bgcolor="white">
 
 <title>Hello! Dasom</title>
@@ -29,28 +30,26 @@
 
     <div class="left"><a href="06.html"><img src="images/left.svg"></a></div>
     <div class="details">
-        <div class="detail1">
-            <span class="detailtitle">title</span><p>
+        <div class="detailline">
+            <div class="detail1">
+                <span class="detailtitle">title</span><br>
         <span class="detailcategory">
-               motion graphic <br> 2014.03-2014.11
+            branding <br>
         </span>
-            <div class="people">  </div>
+                <!--<div class="people">  </div>-->
+
+            </div>
+            <div class="detail2">
+                <span class="detailtext">포트폴리오 작품설명 </span>
+            </div>
 
         </div>
-        <div class="detail2">
-            <span class="detailtext">포트폴리오 작품설명 </span>
-        </div>
+
 
     </div>
 
-    <div class="works"> <div id="img-resize">
-        <iframe src="//player.vimeo.com/video/79606523" width="100%" height="320px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div></div>
-    <img src="images/이미지.jpg">
-
-
-
-    </div></div>
-    <!--<div class="end"><i class="fa fa-chevron-circle-up"></i></div>-->
+    <div class="works"> <div id="img-resize"><img src="images/이미지.jpg"></div></div>
+    <div class="end"><i class="fa fa-chevron-circle-up"></i></div>
     <div class="right"><a href="01.html"><img src="images/right.svg"></a></div>
 </div>
 
@@ -66,33 +65,40 @@
         </div></header>
 
     <div class="details">
-        <div class="detail1">
-            <span class="detailtitle">title</span><p>
+        <div class="detailline">
+            <div class="detail1">
+                <span class="detailtitle">title</span><br>
 
 
              <span class="detailcategory">
-            motion graphic <br> 2014.03-2014.11
+            branding <br>
+                  <p></p> <span class="detailtext">포트폴리오 작품설명</span>
         </span>
 
 
 
-            <div class="people">  </div>
+                <!--<div class="people">  </div>-->
 
+
+            </div>
         </div>
+
+
     </div>
 
 
-    <div class="detail2_m">
-        <span class="detailtext">포트폴리오 작품설명</span>
+    <!--<div class="detail2_m">-->
+    <!--<span class="detailtext">포트폴리오 작품설명</span>-->
+    <!--</div>-->
+
+
+    <div class="works2">
+
+        <div id="img-resize"><img src="images/이미지.jpg"></div>
     </div>
-
-
-    <div class="works2"> <div id="img-resize">
-        <iframe src="//player.vimeo.com/video/79606523" width="100%" height="240px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div></div>
 
 </div>
 
 
 </body>
-
 </html>
