--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <header class="major">
         <div class="major2 clearfix">
             <!--<div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>-->
-            <div class="logo"><a href="index.html"><img src="images/logo.svg"></a></div>
+            <div class="logo">
+
+
+                <a href="index.html"><img src="images/logo.svg"></a></div>
+
+
             <div class="profile"><a href="profile.html"><img src="images/profile.svg"></a></div>
         </div>
 
